singIn_signUp_Indext

--- a/view/sign/signIn.html
+++ b/view/sign/signIn.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
+<div class="">
+    <center><h3 style="color: blue"> Login</h3></center>
+    <form action="" method="post" style="text-align: center">
+        <input type="email" placeholder="email">
+        <input type="password" placeholder="password">
+        <button type="submit">Login</button>
+    </form>
+</div>
 <body>
 
 </body>
