--- a/view/sign/signUp.html
+++ b/view/sign/signUp.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,19 @@
     <title>Title</title>
 </head>
 <body>
+<div class="">
+    <center><h3 style="color: blue"> sign In</h3></center>
+    <form action="" method="post" style="text-align: center">
+        <input type="email" placeholder="email"><br>
+        <input type="password" placeholder="password"><br>
+        <input type="userName" placeholder="userName"><br>
+        <input type="age" placeholder="age"><br>
+        <input type="phoneNumber" placeholder="phoneNumber"><br>
+        <button type="submit">Login</button>
+    </form>
+</div>
+
+
 
 </body>
 </html>
