--- a/view/product/edit.html
+++ b/view/product/edit.html
@@ -5,6 +5,17 @@
     <title>Title</title>
 </head>
 <body>
-
+<div class="">
+  <center>  <h3>EditProduct</h3></center>
+    <form method="post" style="text-align: center">
+        <input type="text" name="name_product" value="{name}">
+        <input type="text" name="price" value="{price}">
+        <input type="text" name="description" value="{description}">
+        <select name="id_category">
+            {category}
+        </select>
+        <button>EDIT</button>
+    </form>
+</div>
 </body>
 </html>
