--- a/view/index.html
+++ b/view/index.html
@@ -50,7 +50,7 @@
             </tr>
             </thead>
             <tbody>
-            {productShoppingCart}
+            {shoppingCart}
             </tbody>
 
         </table>
