--- a/view/error/error.html
+++ b/view/error/error.html
@@ -5,6 +5,13 @@
     <title>Title</title>
 </head>
 <body>
+<div class="">
+    <center>
+        <img  src="images.jpg" height="325" width="325"/>
+        <h1> 404 not found</h1>
+        <a href="/home"> Home </a>
+    </center>
+</div>
 
 </body>
 </html>
