--- a/view/error/error.html
+++ b/view/error/error.html
@@ -7,7 +7,7 @@
 <body>
 <div class="">
     <center>
-        <img  src="images.jpg" height="325" width="325"/>
+        <img  src="https://firebasestorage.googleapis.com/v0/b/case-studymd3.appspot.com/o/images%2Fimages.jpg?alt=media&token=4c6dad7e-72c5-445b-9a12-abc36b3e1865" height="325" width="325"/>
         <h1> 404 not found</h1>
         <a href="/home"> Home </a>
     </center>
