trc khi lam chi tiet product

--- a/view/index.html
+++ b/view/index.html
@@ -13,7 +13,7 @@
     <style>
         .navbar2 {
             height: 100%;
-            width: 80px;
+            width: 200px;
             position: fixed;
             z-index: 1;
             top: 0;
@@ -33,13 +33,17 @@
             background-color: #ddd;
             color: black;
         }
+        .test {
+            transform: translateX(220px);
+        }
 
     </style>
 
 </head>
 <body>
-<div class="">
-    <center><h3>PRODUCT TABLE</h3></center>
+<h3 style="text-align: center">PRODUCT TABLE</h3>
+<div class="test" >
+
     <form method="post">
         <table class="table table-striped">
             <thead>
@@ -65,6 +69,11 @@
     <a href="#">Link 2</a>
     <a href="#">Link 3</a>
     <a href="#">Link 4</a>
+    <a href="#">Link 5</a>
+</div>
+<div class="border-bottom-0">
+    <a href="#">sigIn</a>
+    <a href="#">sign out</a>
 </div>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
