--- a/view/product/edit.html
+++ b/view/product/edit.html
@@ -3,19 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="">
-  <center>  <h3>EditProduct</h3></center>
-    <form method="post" style="text-align: center">
-        <input type="text" name="name_product" value="{name}">
-        <input type="text" name="price" value="{price}">
-        <input type="text" name="description" value="{description}">
-        <select name="id_category">
-            {category}
-        </select>
-        <button>EDIT</button>
-    </form>
-</div>
+
+
 </body>
 </html>
