--- a/view/sign/signIn.html
+++ b/view/sign/signIn.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<div class="">
-    <center><h3 style="color: blue"> Login</h3></center>
-    <form action="" method="post" style="text-align: center">
+<div style="margin-left: auto; margin-right: auto;"  >
+    <h3 style="color: blue"> Login</h3>
+    <form action="" method="post">
         <input type="email" placeholder="email">
         <input type="password" placeholder="password">
         <button type="submit">Login</button>
