--- a/view/index.html
+++ b/view/index.html
@@ -32,6 +32,8 @@
         left: 0;
         width: 100%;
         background: Black;
+        padding-top: 0;
+        padding-bottom: 0;
     }
 
     .navbar-left {
@@ -108,13 +110,11 @@
     }
 </style>
 
-<nav class="navbar" style="
-    padding-top: 0;
-    padding-bottom: 0;
+<nav class="navbar"
 ">
     <div class="contronller">
         <a class="navbar-brand" href="/home">
-            <h1> HOME </h1>
+             HOME
         </a>
 
         <div class="navbar-left">
