--- a/view/sign/signIn.html
+++ b/view/sign/signIn.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+            integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+            integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+            crossorigin="anonymous"></script>
 </head>
 
-<div style="margin-left: auto; margin-right: auto;"  >
-    <h3 style="color: blue"> Login</h3>
-    <form action="" method="post">
-        <input type="email" placeholder="email">
-        <input type="password"placeholder="password">
-        <button type="submit">Login</button>
-    </form>
-</div>
 
 <style>
     /* * * * * * * * * * * * * * * * * * * * * * * * * * *
@@ -34,6 +34,8 @@
         left: 0;
         width: 100%;
         background: Black;
+        padding-top: 0;
+        padding-bottom: 0;
     }
 
     .navbar-left {
@@ -111,7 +113,7 @@
 <nav class="navbar">
     <div class="contronller">
         <a class="navbar-brand" href="/home">
-            <h1> HOME </h1>
+             HOME
         </a>
 
         <div class="navbar-left">
