trc khi chuyen sang dev

--- a/view/index.html
+++ b/view/index.html
@@ -106,12 +106,14 @@
             cursor: pointer;
         }
     }
-</style>
+    div .product {
+        display: flex;
+    }
 
-<nav class="navbar" style="
-    padding-top: 0;
-    padding-bottom: 0;
-">
+</style>
+<body>
+<main></main>
+<nav class="navbar" style=" padding-top: 0; padding-bottom: 0;">
     <div class="contronller">
         <a class="navbar-brand" href="/home">
             HOME
@@ -132,12 +134,5 @@
         </div>
     </div>
 </nav>
-
-<body>
-
-        </table>
-
-    </form>
-</div>
 </body>
 </html>
