--- a/view/error/error.html
+++ b/view/error/error.html
@@ -3,14 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .size-image{
+            width: 450px;
+            height: 760px;
+            margin-left: auto;
+            margin-right: auto;
+            margin-bottom: auto;
+            margin-top: auto;
+        }
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        body{
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
-<div class="">
-    <center>
-        <img  src="https://firebasestorage.googleapis.com/v0/b/case-studymd3.appspot.com/o/images%2Fimages.jpg?alt=media&token=4c6dad7e-72c5-445b-9a12-abc36b3e1865" height="325" width="325"/>
-        <h1> 404 not found</h1>
-        <a href="/home"> Home </a>
-    </center>
+<div class="size-image">
+    <a href="/home"><img src="https://firebasestorage.googleapis.com/v0/b/case-studymd3.appspot.com/o/images%2Fimage%2FHD-wallpaper-error-404-brain-error404.jpg?alt=media&token=66ce7eb1-36cd-40ad-add2-4273d259a0df"/></a>
 </div>
 
 </body>
