Phong upadate index

--- a/view/index.html
+++ b/view/index.html
@@ -28,6 +28,7 @@
 
     .navbar {
         position: fixed;
+        z-index: 99999;
         top: 0;
         left: 0;
         width: 100%;
@@ -147,6 +148,7 @@
         font-size: 14px;
         color: #111;
         line-height: 1.15;
+
     }
 
     #wrapper {
@@ -161,7 +163,6 @@
 
     h1 {
         font-size: 18px;
-        color: #111;
         padding: 10px 20px;
         text-transform: uppercase;
         border: 1px solid #bebebe;
@@ -205,6 +206,7 @@
 
     ul.products li .product-top .product-thumb img {
         display: block;
+
     }
 
     ul.products li .product-top a.shopping-cart {
