lam xong dang ky(chua co cookie)

--- a/view/sign/signIn.html
+++ b/view/sign/signIn.html
@@ -142,8 +142,8 @@
     <div class="" style=" position: relative">
         <center><h3 style="color: blue"> Login</h3></center>
         <form action="" method="post" style="text-align: center">
-            <input type="email" placeholder="email">
-            <input type="password" placeholder="password">
+            <input type="email" placeholder="email" name="email">
+            <input type="password" placeholder="password" name="password">
             <button type="submit">Login</button>
         </form>
     </div>
