xong dang nhap va dang ky (chua co cookie)

--- a/view/sign/signUp.html
+++ b/view/sign/signUp.html
@@ -138,11 +138,12 @@
 <div class="" style="position: relative ">
     <center><h3 style="color: blue"> SIGN UP </h3></center>
     <form action="" method="post" style="text-align: center">
-        <input type="email" placeholder="Gmail" required><br>
-        <input type="password" placeholder="Password" required> <br>
-        <input type="text" placeholder="Name" required><br>
-        <input type="number" placeholder="Age" required><br>
-        <input type="tel" placeholder="Phone" required><br>
+        <input type="email" placeholder="Gmail" required name="email"><br>
+        <input type="password" placeholder="Password" required name="password"> <br>
+        <input type="text" placeholder="Name" required name="username"><br>
+        <input type="number" placeholder="Age" required name="age"><br>
+        <input type="tel" placeholder="Phone" required name="phone"><br>
+        <input type="text" placeholder="address" required name="address"><br>
         <button type="submit">Login</button>
     </form>
 </div>
