--- a/view/admin/edit.html
+++ b/view/admin/edit.html
@@ -5,9 +5,140 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<!--    NAVBAR-->
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
+        body{
+            font-family: 'Open Sans', sans-serif;
+            font-size: 14px;
+            color: #111;
+            line-height: 1.15;
+        }
+        /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+     * Reseting CSS
+     */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+         * Styling navigation bar for large screen devices
+         */
+
+        .navbar {
+            position: fixed;
+            z-index: 99999;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background: Black;
+            padding-top: 0;
+            padding-bottom: 0;
+        }
+
+        .navbar-left {
+            display: inline-block;
+            margin-left: 15px;
+        }
+
+        .navbar-right {
+            display: inline-block;
+            margin-right: 15px;
+            position: absolute;
+            top: 0;
+            right: 0;
+        }
+
+        .navbar-brand,
+        .navbar .nav-link {
+            color: White;
+            text-decoration: none;
+            display: inline-block;
+            padding: 15px;
+        }
+
+        .navbar-brand {
+            font-weight: bold;
+            padding-left: 30px;
+            padding-right: 30px;
+            background: RoyalBlue;
+        }
+
+        .navbar .nav-link:hover {
+            color: LightGray;
+        }
+
+        .navbar-collapse,
+        .navbar-toggler {
+            display: none;
+        }
+
+        /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+         * Override styles to support mobile devices
+         */
+
+        @media (max-width: 842px) {
+            .navbar-right,
+            .navbar-left {
+                display: block;
+                border-top: 1px solid DimGray;
+            }
+
+            .navbar-right {
+                position: static;
+            }
+
+            .navbar .nav-link {
+                display: block;
+            }
+
+            .navbar-collapse:checked + .navbar {
+                max-height: 50px;
+                overflow: hidden;
+            }
+
+            .navbar-toggler {
+                color: White;
+                display: inline-block;
+                padding: 15px 25px;
+                position: absolute;
+                top: 0;
+                right: 0;
+                border-left: 1px solid DimGray;
+                cursor: pointer;
+            }
+        }
+        div.editTable{
+
+        }
+    </style>
 </head>
 <body>
+<nav class="navbar">
+    <div class="contronller">
+        <a class="navbar-brand" href="/home">
+            HOME
+        </a>
 
+        <div class="navbar-left">
+            <a class="nav-link" href="#">Link 1</a>
+            <a class="nav-link" href="#">Link 2</a>
+            <a class="nav-link" href="#">Link 3</a>
+            <a class="nav-link" href="#">Link 4</a>
+            <a class="nav-link" href="#">Link 5</a>
+        </div>
 
+        <div class="navbar-right">
+
+            <a class="nav-link" href="/signin">SIGN IN</a>
+            <a class="nav-link" href="/signup">SIGN UP</a>
+        </div>
+    </div>
+</nav>
+<div class="editTable">
+
+</div>
 </body>
 </html>
