--- a/view/product/descriptionProduct.html
+++ b/view/product/descriptionProduct.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>NavBarTesting</title>
+    <title>Product Description</title>
 </head>
 <body>
 
