--- a/view/product/shoppingCart.html
+++ b/view/product/shoppingCart.html
@@ -2,9 +2,205 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Shopping Cart</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
+            integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+            integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+            crossorigin="anonymous"></script>
 </head>
-<body>
+<style>
+    /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+ * Reseting CSS
+ */
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
+    /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+     * Styling navigation bar for large screen devices
+     */
+
+    .navbar {
+        position: fixed;
+        z-index: 99999;
+        top: 0;
+        left: 0;
+        width: 100%;
+        background: Black;
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+
+    .navbar-left {
+        display: inline-block;
+        margin-left: 15px;
+    }
+
+    .navbar-right {
+        display: inline-block;
+        margin-right: 15px;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    .navbar-brand,
+    .navbar .nav-link {
+        color: White;
+        text-decoration: none;
+        display: inline-block;
+        padding: 15px;
+    }
+
+    .navbar-brand {
+        font-weight: bold;
+        padding-left: 30px;
+        padding-right: 30px;
+        background: RoyalBlue;
+    }
+
+    .navbar .nav-link:hover {
+        color: LightGray;
+    }
+
+    .navbar-collapse,
+    .navbar-toggler {
+        display: none;
+    }
+
+    /* * * * * * * * * * * * * * * * * * * * * * * * * * *
+     * Override styles to support mobile devices
+     */
+
+    @media (max-width: 842px) {
+        .navbar-right,
+        .navbar-left {
+            display: block;
+            border-top: 1px solid DimGray;
+        }
+
+        .navbar-right {
+            position: static;
+        }
+
+        .navbar .nav-link {
+            display: block;
+        }
+
+        .navbar-collapse:checked + .navbar {
+            max-height: 50px;
+            overflow: hidden;
+        }
+
+        .navbar-toggler {
+            color: White;
+            display: inline-block;
+            padding: 15px 25px;
+            position: absolute;
+            top: 0;
+            right: 0;
+            border-left: 1px solid DimGray;
+            cursor: pointer;
+        }
+    }
+</style>
+
+
+<nav class="navbar">
+    <div class="contronller">
+        <a class="navbar-brand" href="/home">
+            HOME
+        </a>
+
+        <div class="navbar-left">
+            <a class="nav-link" href="#">Link 1</a>
+            <a class="nav-link" href="#">Link 2</a>
+            <a class="nav-link" href="#">Link 3</a>
+            <a class="nav-link" href="#">Link 4</a>
+            <a class="nav-link" href="#">Link 5</a>
+        </div>
+
+        <div class="navbar-right">
+
+            <a class="nav-link" href="/signin">SIGN IN</a>
+            <a class="nav-link" href="/signup">SIGN UP</a>
+        </div>
+    </div>
+</nav>
+
+<style>
+    .MainBoundary {
+        margin-top: 5.5%;
+        margin-bottom: 5.5%;
+        width: 90%;
+    }
+
+    .ShoppingCartIntro {
+        margin-top: 5.5%;
+        margin-bottom: 2.5%;
+        text-align: center;
+        font-weight: bold;
+        font-family: "Times New Roman", Times, serif;
+        font-size: 200%;
+    }
+
+    table {
+        margin-top: 1.5%;
+        margin-left: 6.25%;
+        width: 100%;
+        border-collapse: collapse;
+
+    }
+
+    th {
+        text-align: center;
+        border: 1px solid blue;
+        padding: 15px
+    }
+
+    td {
+        text-align: center;
+        border: 1px solid blue;
+        padding: 15px
+    }
+</style>
+
+<body>
+<div class="MainBoundary">
+    <div class="ShoppingCartIntro">Shopping Cart</div>
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Image</th>
+            <th>Description</th>
+            <th>Change</th>
+        </tr>
+        <tr>
+            <td>Emil</td>
+            <td>Tobias</td>
+            <td>Linus</td>
+            <td>Emil</td>
+            <td>Tobias</td>
+            <td>Linus</td>
+        </tr>
+        <tr>
+            <td>16</td>
+            <td>14</td>
+            <td>10</td>
+            <td>16</td>
+            <td>14</td>
+            <td>10</td>
+        </tr>
+    </table>
+
+</div>
 </body>
 </html>
