--- a/view/admin/addProduct.html
+++ b/view/admin/addProduct.html
@@ -2,18 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-            integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-            integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-            crossorigin="anonymous"></script>
+    <title>addproduct</title>
+
 </head>
-
-
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
 
@@ -148,18 +139,73 @@
         </div>
     </div>
 </nav>
-<body  >
-<center>
-    <div class="" style=" position: relative">
-        <center><h3 style="color: blue"> Login</h3></center>
-        <form action="" method="post" style="text-align: center">
-            <input type="email" placeholder="email" name="email">
-            <input type="password" placeholder="password" name="password">
-            <button type="submit">Login</button>
-        </form>
-    </div>
-</center>
+<body >
 
+<div class="">
+    <center>    <h3>AddProduct</h3></center>
+    <form method="post" style="text-align: center">
+
+        <input type="text" name="nameProduct" placeholder="name" required>
+        <input type="text" name="priceProduct" placeholder="price" required>
+        <input type="text" name="quantityProduct" placeholder="quantityProduct" required>
+        <input type="text" name="descriptionProduct" placeholder=" description" required>
+        <select name="categoryId">
+            {categories}
+        </select>
+        <br>
+        <input type="hidden" name="image" id ='image'>
+        <input type="file" id="fileButton" onchange="uploadImage(event)">
+        <button type="submit">Submit</button>
+    </form>
+</div>
 
 </body>
 </html>
+<script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
+<script>
+    // Initialize Firebase
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+        apiKey: "AIzaSyCBviBka1mZL1Vc2Tb-FEA5LJHaAIyug7s",
+        authDomain: "case-studymd3.firebaseapp.com",
+        projectId: "case-studymd3",
+        storageBucket: "case-studymd3.appspot.com",
+        messagingSenderId: "756529698469",
+        appId: "1:756529698469:web:21cc567d4fcafde2ac5f4c",
+        measurementId: "G-9GDFZE1WB9"
+    };
+    firebase.initializeApp(firebaseConfig);
+</script>
+
+<script type="text/javascript">
+    function uploadImage(e) {
+        let fbBucketName = 'images';
+        let uploader = document.getElementById('uploader');
+        let file = e.target.files[0];
+        let storageRef = firebase.storage().ref(`${fbBucketName}/${file.name}`);
+        let uploadTask = storageRef.put(file);
+        uploadTask.on(firebase.storage.TaskEvent.STATE_CHANGED,
+            function (snapshot) {
+                uploader.value = (snapshot.bytesTransferred / snapshot.totalBytes) * 100;
+                switch (snapshot.state) {
+                    case firebase.storage.TaskState.PAUSED:
+                        break;
+                    case firebase.storage.TaskState.RUNNING:
+                        break;
+                }
+            }, function (error) {
+                switch (error.code) {
+                    case 'storage/unauthorized':
+                        break;
+                    case 'storage/canceled':
+                        break;
+                    case 'storage/unknown':
+                        break;
+                }
+            }, function () {
+                let downloadURL = uploadTask.snapshot.downloadURL;
+                document.getElementById('imgDiv').innerHTML = `<img src="${downloadURL}" alt="">`
+                document.getElementById('image').value = downloadURL;
+            });
+    }
+</script>
