phong update file addProduct- index - productController

--- a/view/index.html
+++ b/view/index.html
@@ -145,6 +145,7 @@
             <a class="nav-link" href="/signup">SIGN UP</a>
         </div>
     </div>
+
 </nav>
 
 <body >
@@ -192,8 +193,9 @@
     }
 
     ul.products li img {
+
         max-width: 100%;
-        height: auto;
+        height: 250px;
     }
 
     ul.products li .product-top {
@@ -264,22 +266,7 @@
         <h1>shop ba con sói hướng nội</h1>
     </div>
     <ul class="products">
-        <li>
-            <div class="product-item">
-                <div class="product-top">
-                    <a href="/signin" class="product-thumb">
-                        <img src="https://haycafe.vn/wp-content/uploads/2021/11/hinh-anh-hoat-hinh-de-thuong-cute-dep-nhat.jpg "
-                             alt="">
-                    </a>
-                    <a href="" class="shopping-cart">ADD SHOPPING CART</a>
-                </div>
-                <div class="product-info">
-                    <a href="" class="product-cat"> bags</a>
-                    <a href="" class="product-name">name bag</a>
-                    <div class="product-price">500.000VND</div>
-                </div>
-            </div>
-        </li>
+        {product}
     </ul>
 </div>
 
