--- a/view/admin/editAdmin.html
+++ b/view/admin/editAdmin.html
@@ -164,19 +164,19 @@
             <td>
                 <p>Nhập tên sản phẩm:</p>
             </td>
-            <td><input type="text" name="nameProduct" required></td>
+            <td><input type="text" name="nameProduct" value="{nameProduct}" required></td>
         </tr>
         <tr>
             <td>
                 <p>Nhập giá sản phẩm:</p></td>
-            <td><input type="text" name="priceProduct" required>
+            <td><input type="text" name="priceProduct" value="{priceProduct}" required>
             </td>
         </tr>
         <tr>
             <td>
                 <p>Nhập số lượng sản phẩm:</p>
             </td>
-            <td><input type="text" name="quantityProduct" required></td>
+            <td><input type="text" name="quantityProduct" value="{quantityProduct}" required></td>
         </tr>
         <tr>
             <td>
@@ -193,7 +193,7 @@
         </tr>
         <tr>
             <td>
-                <input type="hidden" name="image" id='image'>
+                <input type="hidden" name="image" id='image' >
                 <input type="file" id="fileButton" onchange="uploadImage(event)">
             </td>
         </tr>
