lam xong hien thi chi tiet sp

--- a/view/product/descriptionProduct.html
+++ b/view/product/descriptionProduct.html
@@ -6,24 +6,24 @@
 </head>
 <body>
 
-<div class="descriptionProduct" style="display: flex">
+<div class="descriptionProduct" style=" margin: 100px">
     <div class="imageProduct">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7nOez59xShCAwcc8io6pVe_w5V5eR_4BEJw&usqp=CAU" alt="">
+        <img style="max-width: 100%;height: 250px" src="{image}" alt="">
     </div>
     <div class="">
         <table class="table">
             <thead>
             <tr>
-                <td>name</td>
+                <td>Name:{descriptionName}</td>
             </tr>
             <tr>
-                <td>price</td>
+                <td>Price:{descriptionPrice}</td>
             </tr>
             <tr>
-                <td>description</td>
+                <td>Description:{descriptionDescription}</td>
             </tr>
             <tr>
-                <td>quantity</td>
+                <td>Quantity:{descriptionQuantity}</td>
             </tr>
             </thead>
             <tbody>
