Added SearchBar for shoppingCart

--- a/view/index.html
+++ b/view/index.html
@@ -126,7 +126,7 @@
     }
 </style>
 <nav class="navbar">
-    <div class="contronller">
+    <div class="controller">
         <a class="navbar-brand" href="/home">
             HOME
         </a>
@@ -252,7 +252,7 @@
         text-decoration: none;
     }
 
-    ul.products li .product-info a.product-cat {
+    ul.products li .product-info a.product-cart {
         font-size: 11px;
         text-transform: uppercase;
         color: green;
