--- a/view/sign/signIn.html
+++ b/view/sign/signIn.html
@@ -129,7 +129,7 @@
 </style>
 <nav class="navbar">
     <div class="contronller">
-        <a class="navbar-brand" href="/home">
+        <a class="navbar-brand" href="/signout">
             HOME
         </a>
 
