--- a/view/sign/signUp.html
+++ b/view/sign/signUp.html
@@ -128,7 +128,7 @@
 </style>
 <nav class="navbar">
     <div class="contronller">
-        <a class="navbar-brand" href="/home">
+        <a class="navbar-brand" href="/signout">
             HOME
         </a>
 
