Phong sua lai {shoppingCart}

--- a/view/index.html
+++ b/view/index.html
@@ -145,17 +145,20 @@
             <a class="nav-link" href="/shoppingCart">shoppingCart</a>
             <a class="nav-link" href="#">Link 3</a>
             <a class="nav-link" href="#">Link 4</a>
-            <a class="nav-search-box" href="/searchProduct">
-                <div class="input-group">
-                    <div class="form-outline">
-                        <input type="search" id="form1" class="form-control"/>
-                        <label class="form-label" for="form1"></label>
+            <form action="">
+                <a class="nav-search-box" href="/searchProduct">
+                    <div class="input-group">
+                        <div class="form-outline">
+                            <input type="search" id="form1" class="form-control"/>
+                            <label class="form-label" for="form1"></label>
+                        </div>
+                        <button type="button" class="btn btn-primary">
+                            <i class="fas fa-search">Search</i>
+                        </button>
                     </div>
-                    <button type="button" class="btn btn-primary">
-                        <i class="fas fa-search">Search</i>
-                    </button>
-                </div>
-            </a>
+                </a>
+            </form>
+
 
         </div>
 
