--- a/view/product/shoppingCart.html
+++ b/view/product/shoppingCart.html
@@ -80,9 +80,14 @@
         text-decoration: none;
         display: inline-block;
         padding: 15px;
+
     }
 
     .navbar-brand {
+        color: White;
+        text-decoration: none;
+        display: inline-block;
+        padding: 15px;
         font-weight: bold;
         padding-left: 30px;
         padding-right: 30px;
@@ -107,10 +112,16 @@
         .navbar-left {
             display: block;
             border-top: 1px solid DimGray;
+
         }
 
         .navbar-right {
             position: static;
+            display: inline-block;
+            margin-right: 15px;
+            position: absolute;
+            top: 0;
+            right: 0;
         }
 
         .navbar .nav-link {
