Phong tang giam so luong cart và delete

--- a/view/product/shoppingCart.html
+++ b/view/product/shoppingCart.html
@@ -264,8 +264,8 @@
 <div class="MainBoundary">
     <div class="ShoppingCartIntro">Shopping Cart</div>
     <div class="BuyButton">
-        <button type="button" class="btn btn-outline-danger"  id="deleteBtn" >Delete</button>
-        {deleteAll}
+        <a href="/delAllToCart"  class="btn btn-outline-danger"   >Delete</a>
+
     </div>
     <table>
         <tr>
