sẽ lam phan search

--- a/view/index.html
+++ b/view/index.html
@@ -216,6 +216,12 @@
         <a class="nav-link" href="/showInfor"><i class="fas fa-user" style="color: white"></i></a>
         <a class="nav-link" href="/shoppingCart"><i class="fas fa-cart-arrow-down" style="color: white"></i></a>
     </div>
+    <div class="search-container">
+        <form method="post">
+            <input type="text" placeholder="Search.." name="search">
+            <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+    </div>
     <div class="navbar-right">
         <a class="nav-link" href="/signout">SIGN OUT</a>
     </div>
@@ -229,7 +235,6 @@
             <option>-Sắp xếp-</option>
             <option value="http://localhost:8080/sortUp">Sắp xếp theo giá tăng dần</option><br>
             <option value="http://localhost:8080/sortDown">Sắp xếp theo giá giảm dần</option><br>
-
         </select>
     </div>
     <ul class="products">
