trc khi pull ve sang 10/4

--- a/view/product/shoppingCart.html
+++ b/view/product/shoppingCart.html
@@ -238,13 +238,7 @@
     img {
         max-width: 100%;
         height: 250px;
-<<<<<<< HEAD
-<<<<<<< HEAD
 
-=======
->>>>>>> 9a60fbbcbd2534d2638e747aa66040e253fec1e8
-=======
->>>>>>> d94c94a72c1c442d08f57bbff759060e07fcd4b3
     }
 
     .MainBoundary {
@@ -311,7 +305,7 @@
     }
 
 </style>
-<body>
+<body  onload="showTotalPriceToCart()">
 <div class="navbar" style="padding-bottom: 0px;padding-top: 0px;">
     <a href="/home" class="navbar-brand" style="padding-bottom: 15px">Home</a>
     <div class="navbar-left">
@@ -325,7 +319,7 @@
 <div class="MainBoundary">
     <div class="ShoppingCartIntro">Shopping Cart</div>
     <div class="BuyButton">
-        <a href="/delAllToCart"  class="btn btn-outline-danger" >Delete</a>
+        <a href="/deleteAll"  class="btn btn-outline-danger" >Delete</a>
 
     </div>
     <table>
@@ -343,7 +337,11 @@
         </tbody>
     </table>
     <div class="totalPrice">{totalPrice}</div>
-    <div class></div>
+    <div class>
+        <a href="/buy"> BUY NOW</a>
+    </div>
+
 </div>
+
 </body>
 </html>
