--- a/view/index.html
+++ b/view/index.html
@@ -85,68 +85,32 @@
         margin-left: 15px;
         margin-right: auto;
     }
+
+    .navbar-center {
+        /* border: 0px solid green; */
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 18px;
+    }
+
+    input, button {
+        border-bottom-width: 0px;
+        border-right-width: 0px;
+        border-top-width: 0px;
+        border-left-width: 0px;
+        border-radius: 2px;
+        font-size: 20px;
+    }
+
+    button {
+        background-color: #0061ff;
+        color: white;
+    }
+    button:hover {
+        background-color:white;
+        color:  #0061ff;
+    }
 </style>
-
-
-<nav class="navbar">
-    <div class="controller">
-        <a class="navbar-brand" href="/home">
-            HOME
-        </a>
-
-        <div class="navbar-left">
-            <a class="nav-link" href="/addProduct">add Product</a>
-            <a class="nav-link" href="/shoppingCart">shoppingCart</a>
-            <a class="nav-link" href="#">Link 3</a>
-            <a class="nav-link" href="#">Link 4</a>
-                <div class="input-group">
-                    <div class="form-outline">
-                        <input type="search" id="form1" class="form-control"/>
-                        <label class="form-label" for="form1"></label>
-                    </div>
-                    <button type="button" class="btn btn-primary">
-                        <i class="fas fa-search">Search</i>
-                    </button>
-                </div>
-            </a>
-
-        </div>
-
-        <div class="navbar-right">
-            <a class="nav-link" href="/signout">SIGN OUT</a>
-        </div>
-    </div>
-</nav>
-
-<style>
-    .input-group {
-        float: none;
-        position: absolute;
-        top: 0%;
-        left: -5%;
-    }
-
-    .form-control {
-        height: 38px;
-    }
-
-    .form-outline {
-        float: none;
-        position: absolute;
-        top: 25%;
-        left: 65%;
-    }
-
-    .btn-primary {
-        float: none;
-        position: absolute;
-        left: 80%;
-        transform: translate(0%, 25%);
-    }
-
-</style>
-<body>
-
 <style>
     /*Li va Ul*/
     @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,800&display=swap');
@@ -277,6 +241,12 @@
         <a class="nav-link" href="/showInfor"><i class="fas fa-user" style="color: white"></i></a>
         <a class="nav-link" href="/shoppingCart"><i class="fas fa-cart-arrow-down" style="color: white"></i></a>
     </div>
+    <div class="navbar-center">
+        <form method="post">
+            <input type="text" placeholder="search" name="searchProduct">
+            <button type="submit">Search</button>
+        </form>
+    </div>
     <div class="navbar-right">
         <a class="nav-link" href="/signout">SIGN OUT</a>
     </div>
@@ -287,8 +257,8 @@
     </div>
     <div>
         <label>-Sắp xếp-</label><br>
-        <button><a href="/sortUp">Sắp xếp theo giá tăng dần</a></button><br>
-        <button><a href="/sortDown">Sắp xếp theo giá giảm dần</a></button>
+        <a href="/sortUp">Sắp xếp theo giá tăng dần</a><br>
+        <a href="/sortDown">Sắp xếp theo giá giảm dần</a>
     </div>
     <ul class="products">
         {product}
@@ -297,3 +267,4 @@
 
 
 </body>
+</html>
