Phong commit history Store

--- a/view/product/shoppingCart.html
+++ b/view/product/shoppingCart.html
@@ -259,7 +259,7 @@
     }
 
     .BuyButton {
-        margin-left: 94.5%;
+        margin-left: 80%;
     }
 
     .totalPrice {
@@ -321,7 +321,7 @@
     <div class="ShoppingCartIntro">Shopping Cart</div>
     <div class="BuyButton">
         <a href="/delAllToCart"  class="btn btn-outline-danger" >Delete</a>
-
+        <a href="/buynow" class="btn btn-outline-danger" > Buy Now </a>
     </div>
     <table>
         <tr>
