Phong add lan cuoi

--- a/view/product/orderDetail.html
+++ b/view/product/orderDetail.html
@@ -318,7 +318,7 @@
   </div>
 </div>
 <div class="MainBoundary">
-  <div class="ShoppingCartIntro">History Buy</div>
+  <div class="ShoppingCartIntro">History Store</div>
 
   <table>
     <tr>
